# pf_final_project

cabal-project/: .ghc.environment.x86_64-mingw32-9.4.8  CHANGELOG.md  LICENSE  cabal-project.cabal
cabal-project/app/: CityPopulation.hs  Main.hs
cabal-project/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
cabal-project/test/: Spec.hs
final-project-citypopulation/: .cabal-fmt-18596-lN92qt5wzmiA  CHANGELOG.md  README.md  final-project-citypopulation.cabal  package.yaml
final-project-citypopulation/src/: Main.hs
