cabal-version:      3.0
name:               cabal-project
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             sasankasa, VVojtekMecki
maintainer:         michalikoliwiamagdalena@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable cabal-project
    import:           warnings
    main-is:          Main.hs
    build-depends:    
        base ^>=4.17.2.1,
        http-client,
        http-client-tls,
        http-conduit,
        http-types,
        aeson,
        bytestring,
        text

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite spec
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test, app
    main-is:             Spec.hs
    other-modules:       CityPopulation
    build-depends:       
        base,
        hspec,
        http-client,
        http-client-tls,
        http-types,
        aeson,
        bytestring,
        text

  default-language:    Haskell2010
